02_회원가입 진행중

--- a/src/main/resources/templates/memberPages/memberSave.html
+++ b/src/main/resources/templates/memberPages/memberSave.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>save</title>
   <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+  <script th:src="@{/js/jquery.mim.js}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <style>
     #save-form {
       width: 800px;
@@ -13,7 +15,8 @@
 <body>
 <div class="container" id="save-form">
   <form action="/member/save" method="post" name="saveForm">
-    <input type="text" name="memberEmail" id="memberEmail" placeholder="이메일" class="form-control">
+    <input type="text" name="memberEmail" id="memberEmail" placeholder="이메일" onblur="emailDuplicateCheck()" class="form-control">
+    <span id="email-dup-check"></span>
     <input type="text" name="memberPassword" placeholder="비밀번호" class="form-control">
     <input type="text" name="memberName" placeholder="이름" class="form-control">
     <input type="text" name="memberAge" placeholder="나이" class="form-control">
@@ -22,4 +25,56 @@
   </form>
 </div>
 </body>
+<script th:inline="javascript">
+    const emailDuplicateCheck = () => {
+      const email = document.getElementById("memberEmail").value;
+      const checkResult = document.getElementById("email-dup-check")
+      console.log("입력한 이메일", email);
+
+      axios({
+        method: "post",
+        url: "/member/duplicate-check",
+        params: {
+          inputEmail: email      // 데이터를 보내줄 것
+        }
+      }).then(res => {   // 매개변수 (요청응답메세지 ㅇ)
+        console.log("then 함수 부분")
+        console.log(res);
+        checkResult.innerHTML = "사용할 수 있는 이메일입니다.";
+        checkResult.style.color = "green";
+
+        // 이부분이 실행 문 성공
+      }).catch(res => {
+        console.log("catch 함수 부분")
+        console.log(res);
+        checkResult.innerHTML = "중복된 이메일입니다.";
+        //        checkResult.style.color="red";
+
+      })
+    }
+
+
+
+    //   $.ajax({
+    //      type: "post",
+    //      url:"/member/duplicate-check",
+    //      data:{inputEmail: email},
+    //      dataType:"text",
+    //      success: function (result) {
+    //
+    //      console.log("checkResult",result);
+    //      // if (result == 'ok'){
+    //      //   checkResult.innerHTML = "사용할 수 있는 이메일입니다.";
+    //      //   checkResult.style.color ="green";
+    //      // }else {
+    //      },
+    //     error:function (){
+    //       console.log("실패");
+    //        checkResult.innerHTML="중복된 이메일입니다.";
+    //        checkResult.style.color="red";
+    //      }
+    //
+    //   });
+    // }
+</script>
 </html>
