--- a/src/main/resources/templates/memberPages/memberLogin.html
+++ b/src/main/resources/templates/memberPages/memberLogin.html
@@ -13,6 +13,7 @@
 <body>
 <div class="container" id="login-form">
     <form action="/member/login" method="post">
+        <input type="hidden" name="redirectURL" th:value="${redirectURL}">
         <input type="text" name="memberEmail" placeholder="이메일" class="form-control">
         <input type="text" name="memberPassword" placeholder="비밀번호" class="form-control">
         <input type="submit" class="btn btn-primary" value="로그인">
