--- a/src/main/resources/templates/memberPages/members.html
+++ b/src/main/resources/templates/memberPages/members.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>members</title>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
+<div class="container">
+    <table class="table table-striped table-hover">
 <tr>
     <th>id</th>
     <th>memberEmail</th>
@@ -15,6 +19,9 @@
     <th>memberAge</th>
     <th>memberPhone</th>
     <th>상세조회</th>
+    <th>삭제</th>
+    <th>조회(axios)</th>
+    <th>삭제(axios)</th>
 </tr>
 <tr th:each="member: ${memberList}">
     <td th:text="${member.id}"></td>
@@ -23,10 +30,87 @@
     <div th:if="${session.loginEmail}">
     <td th:text="${member.memberPassword}"></td>
     </div>
+    <td th:text="${member.memberAge}"></td>
+    <td th:text="${member.memberPhone}"></td>
     <td>
         <a th:href="@{|/member/${member.id}|}">조회</a>
     </td>
-
+    <td>
+        <a th:href="@{|/member/delete/${member.id}|}">삭제</a>
+    </td>
+    
+    <td>
+        <button type="button" class="btn btn-primary" th:onclick="findMember([[${member.id}]])">조회</button>
+    </td>
+    <td>
+        <button type="button" class="btn btn-primary" th:onclick="deleteMember([[${member.id}]])">삭제</button>
+    </td>
 </tr>
+    </table>
+<div id="detail-area">
+
+</div>
+</div>
 </body>
+<script th:inline="javascript">
+
+    const findMember = (findId) => {
+            console.log("findId", findId);
+            const detailArea = document.getElementById("detail-area");
+            axios({
+                method: "get",
+                url: "/member/detail-axios/"+findId,
+            }).then(res => {
+                console.log("조회결과", res);
+                console.log("화원객체 ", res.data);
+                console.log("회원이메일",res.data.memberEmail);
+               const member = res.data;
+                let result =
+                    "        <table class=\"table table-striped\">\n" +
+                    "            <tr>\n" +
+                    "                <th>id</th>\n" +
+                    "                <td>" + member.id + "</td>\n" +
+                    "            </tr>\n" +
+                    "            <tr>\n" +
+                    "                <th>email</th>\n" +
+                    "                <td>" + member.memberEmail + "</td>\n" +
+                    "            </tr>\n" +
+                    "            <tr>\n" +
+                    "                <th>password</th>\n" +
+                    "                <td>" + member.memberPassword + "</td>\n" +
+                    "            </tr>\n" +
+                    "            <tr>\n" +
+                    "                <th>name</th>\n" +
+                    "                <td> " + member.memberName + "</td>\n" +
+                    "            </tr>\n" +
+                    "            <tr>\n" +
+                    "                <th>age</th>\n" +
+                    "                <td>" + member.memberAge + "</td>\n" +
+                    "            </tr>\n" +
+                    "             <th>phone</th>\n" +
+                    "              <td>" + member.memberPhone + "</td>\n" +
+                    "                        </tr>\n" +
+                    "        </table>";
+                detailArea.innerHTML = result;
+
+            }).catch(error =>{
+                alert("올바르지 않은 경로입니다.");
+                console.log(error);
+            })
+
+    }
+
+    const deleteMember = (deleteId) => {
+      axios({
+          method: "delete",
+          url: "/member/"+deleteId
+      }).then(res=> {
+          alert("삭제 성공");
+          location.href="/member/";
+          }).catch(res => {
+             alert("삭제 실패");
+      })
+
+    }
+</script>
 </html>
